--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -1,3 +1,9 @@
+.photo-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 24px;
+}
 div.photo-list__item {
   margin: 24px;
   padding: 8px;
