--- a/frontend/src/styles/PhotoDetailsModal.scss
+++ b/frontend/src/styles/PhotoDetailsModal.scss
@@ -63,10 +63,19 @@
 
   &__fav-icon {
     position: absolute;
-    bottom: 16px; // Position at the bottom-left of the image container
-    left: 16px;
-    z-index: 5;
-  }
+  top: 10px;
+  left: 10px;
+  background-color: white;
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
   &__info {
     text-align: left;
