--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -12,7 +12,26 @@ div.photo-list__item {
   border-style: solid;
   border-radius: 8px;
   max-width: fit-content;
-
+  position: relative;
+  
+  .photo-list__like-icon {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 2;
+  
+    background-color: white;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
   img.photo-list__image {
     user-select: none;
     width: 300px;
